[gd_scene load_steps=5 format=3 uid="uid://cast1jxvgp6jk"]

[ext_resource type="Script" path="res://menu_folder/main_menu.gd" id="1_aoq3h"]
[ext_resource type="Texture2D" uid="uid://cr00hkcqxfhha" path="res://raw_images/backgrounds/backgroundSpace_01.1.png" id="2_yhdtb"]
[ext_resource type="AudioStream" uid="uid://dov5ti3032j2h" path="res://raw_sounds/astronaut-child-in-space-17141.mp3" id="3_fujh8"]
[ext_resource type="FontFile" uid="uid://bijxkn1g1xcqu" path="res://raw_font/magnetar.ttf" id="3_nb7jm"]

[node name="Start Menu" type="Control"]
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_aoq3h")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(511, 512)
texture = ExtResource("2_yhdtb")
offset = Vector2(1, 0)

[node name="background2" type="Sprite2D" parent="."]
position = Vector2(1535, 512)
texture = ExtResource("2_yhdtb")
offset = Vector2(1, 0)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 480.0
offset_top = 235.0
offset_right = 680.0
offset_bottom = 441.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_stretch_ratio = 0.0

[node name="start game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "New Game"

[node name="load game" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "Load Game"

[node name="Leaderboard" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "Leaderboard"

[node name="how to play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "How To Play"

[node name="settings" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "Settings"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "Quit Game"

[node name="title" type="Label" parent="."]
layout_mode = 0
offset_left = 365.0
offset_top = 176.0
offset_right = 703.0
offset_bottom = 259.0
rotation = 6.28319
scale = Vector2(1.3, 1.3)
theme_override_fonts/font = ExtResource("3_nb7jm")
text = "COSMIC CLIMBER"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_fujh8")

[node name="AcceptDialog" type="AcceptDialog" parent="."]
mode = 1
title = ""
position = Vector2i(451, 274)
size = Vector2i(250, 100)
visible = true
popup_window = true
extend_to_title = true
theme_override_constants/buttons_separation = 11
ok_button_text = "START!"
dialog_hide_on_ok = false
dialog_autowrap = true

[node name="LineEdit" type="LineEdit" parent="AcceptDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 242.0
offset_bottom = 50.0
theme_override_colors/clear_button_color_pressed = Color(0, 0, 0, 1)
theme_override_colors/clear_button_color = Color(0, 0, 0, 1)
theme_override_colors/selection_color = Color(0, 0, 0, 1)
theme_override_colors/caret_color = Color(0, 0, 0, 1)
theme_override_colors/font_selected_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 0
theme_override_constants/caret_width = 0
theme_override_constants/minimum_character_width = 0
theme_override_fonts/font = ExtResource("3_nb7jm")
placeholder_text = "Insert name..."
alignment = 1

[connection signal="pressed" from="MarginContainer/VBoxContainer/start game" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/load game" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Leaderboard" to="." method="_on_leaderboard_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/how to play" to="." method="_on_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_accept_dialog_confirmed"]
